<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kiva final</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instruction">Please select the mode to proceed...</string>
    <string name="robot">Robot</string>
    <string name="client">Client</string>
    <string name="title_activity_robot">RobotActivity</string>
    <string name="usb_not_connected">USB not connected</string>
    <string name="not_connected_to_client">Not connected to client</string>
    <string name="position_not_set_">Position not set.</string>
    <string name="target_not_set_">Target not set.</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="welcome_to_project_kiva">Welcome to Project Kiva</string>
    <string name="enter_target">Enter target!</string>
    <string name="set">Set</string>

</resources>
