<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sapience.kiva.kivafinal.SwichActivity" >

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/instruction" />

    <Button
        android:id="@+id/btnRobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:text="@string/robot" />
    
    <Button
        android:id="@+id/btnClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRobot"
        android:text="@string/client" />

</RelativeLayout>