<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sapience.kiva.kivafinal.ClientActivity" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_project_kiva"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:id="@+id/setTargetManually"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/welcome"
       >

        <EditText
            android:id="@+id/targetEdit"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/enter_target" />

        <Button
            android:id="@+id/setTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />
   
    </LinearLayout>

    <fragment
        android:id="@+id/frag_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/setTargetManually"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        class="com.sapience.kiva.kivafinal.DeviceListFragment" />

</RelativeLayout>